# vlm_mcp_server

./: .gitignore  Makefile  README.md  pyproject.toml  start_vlm_server.sh
src/vlm_server/: __init__.py  cleanup_gpu.py  cli.py  vlm_server.py  vlms_model.py  vlms_model_manager.py
