[tool.poetry]
name = "vlm-server"
version = "0.1.0"
description = ""
authors = ["Camille <camille.barboule@gmail.com>"]
readme = "README.md"
packages = [{include = "vlm_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = ">=1.7.0,<2.0.0"
bitsandbytes = ">=0.46.0,<0.47.0"
einops = ">=0.8.1,<0.9.0"
python-dotenv = ">=1.1.0,<2.0.0"
timm = ">=1.0.15,<2.0.0"
torch = "==2.5.0"
torchvision = "==0.20.0"
transformers = ">=4.52.4,<5.0.0"
numpy = ">=2.2.6,<3.0.0"
mcp = ">=1.9.2,<2.0.0"
pillow = ">=11.2.1,<12.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"

[tool.poetry.scripts]
vlm-server = "vlm_server.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ajout de la configuration Python path
[tool.poetry.build]
generate-setup-file = false